# parallel_image_pipeline

./: CMakeLists.txt  README.md  notes.txt
mpi/: main.cpp
serial/: main.cpp
